--- a/index.html
+++ b/index.html
@@ -7,16 +7,88 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.10.2/css/all.min.css">
     <link rel="stylesheet" href="./static/style.css">
     <title>Document</title>
 </head>
+
 <body>
-<div class="container">
-    <div class="row">
-        <h1>Kanban Pomodoro</h1>
-        
+    <div class="container">
+        <div class="row">
+            <div class="col-12">
+                <div class="row">
+                    <h1>Kanban Pomodoro</h1>
+                </div>
+                <div class="row">
+                    <div class="col-9"><input type="text" name="task" id="task" placeholder="Nouvelle tâche"
+                            class="col-12"></div>
+                    <div class="col-3"><button class="col-12">Ajouter</button></div>
+                </div>
+                <div class="row">
+                    <div class="col-4">
+                        <div class="row">
+                            <div class="col-12">A faire</div>
+                        </div>
+                        <div class="row">
+                            <div class="col-12">
+                                <ul>
+                                    <li>
+                                        Tâches 3 <button class="delete"><i class="fas fa-times-circle"></i></button>
+                                    </li>
+                                    <li>
+                                        Tâches 4 <button class="delete"><i class="fas fa-times-circle"></i></button>
+                                    </li>
+                                    <li>
+                                        Tâches 5 <button class="delete"><i class="fas fa-times-circle"></i></button>
+                                    </li>
+                                </ul>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-4">
+                        <div class="row">
+                            <div class="col-12">En cours</div>
+                        </div>
+                        <div class="row">
+                            <div class="col-10">
+                                <div>timer à définir</div>
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="col-8">
+                                <button>Début</button>
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="col-8">
+                                <button>Pause</button>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-4">
+                        <div class="row">
+                            <div class="col-12">Fait</div>
+                        </div>
+                        <div class="row">
+                            <div class="col-12">
+                                <ul>
+                                    <li>
+                                        Tâches 1
+                                    </li>
+                                    <li>
+                                        Tâches 2
+                                    </li>
+                                    <li>
+                                        Tâches 6
+                                    </li>
+                                </ul>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
-</div>
 </body>
 <script src="./static/script.js"></script>
 
